# GCAMnet

./: .env.example  .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
data/: .gitignore
data/processed/: .gitignore
docs/: feature_summary.csv  inputs.csv
logs/: .gitignore
ml_gcam/cli/: __init__.py  core.py  data.py  evaluate.py  interpolate.py  plot.py  sensitivity.py  table.py  training.py
ml_gcam/config/: config.toml
ml_gcam/core/: README.md  input.py  interpolate.py
ml_gcam/core/inputs/: bio_constraint_100_hi.xml  building_SSP1.xml  building_SSP1_hi_elec.xml  building_SSP5.xml  building_SSP5_hi_elec.xml  cement_incelas_gssp1.xml  cement_incelas_gssp5.xml  industry_incelas_gssp1.xml  industry_incelas_gssp1_hi_elec.xml  industry_incelas_gssp5.xml  industry_incelas_gssp5_hi_elec.xml  resources_SSP1.xml  resources_SSP5.xml  socioeconomics_gSSP1.xml  socioeconomics_gSSP5.xml  solar_adv.xml  solar_hi_tech_lo_storage.xml  solar_lo_tech_hi_storage.xml  solar_low.xml  solar_storage_hi.xml  solar_storage_lo.xml  solar_tech_hi.xml  solar_tech_lo.xml  wind_adv.xml  wind_hi_tech_lo_storage.xml  wind_lo_tech_hi_storage.xml  wind_low.xml
ml_gcam/core/queries/: ag_commodity_prices.xml  aggregated_land_allocation.xml  climate_forcing.xml  co2_emissions_by_sector.xml  co2_prices.xml  co2_sequestration_by_sector.xml  co2_sequestration_by_tech.xml  elec_energy_input_by_subsector.xml  raw.xml  (+19 more)
ml_gcam/data/: __init__.py  enums.py  experiment.py  scenarios.py  targets.py
ml_gcam/emulator/: __init__.py  model.py
ml_gcam/evaluate/: fraction_binary.py  metrics.py  sensitivity.py
ml_gcam/inference/: inference.py
ml_gcam/plot/: fraction_binary.py  geo.py  qualitative.py  sample_size.py  sensitivity.py  targets.py
ml_gcam/table/: sensitivity.py
ml_gcam/training/: train.py
(+5 files in other folders)
